--- a/src/lawyer/templates/home-cn.html
+++ b/src/lawyer/templates/home-cn.html
@@ -62,8 +62,7 @@
                             <div class="social_media_links">
                                 <ul>
                                     <li><a href="https://api.whatsapp.com/send?phone=996{{whatsapp_number.number}}"> <i class="fa fa-whatsapp"></i> </a></li>
-                                    <li><a href="#"> <i class="fa fa-telegram"></i> </a></li>
-                                    <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
+                                    <li><a href="mailto:{{contact_info.email}}"> <i class="fa fa-envelope"></i> </a></li>
                                 </ul>
                             </div>
                         </div>
@@ -85,7 +84,7 @@
                     <div class="col-xl-7">
                         <div class="single_slider">
                             <div class="slider_text">
-                                <h3>在比什凯克提供专业的法律咨询.</h3>
+                                <h3>专业的移民和签证服务至吉尔吉斯共和国.</h3>
                                 <p>我们的目标是为客户量身定制高质量的服务.</p>
                                 <a href="https://api.whatsapp.com/send?phone=996{{whatsapp_number}}"
                                    class="boxed-btn4 ">与我们联系</a>
@@ -118,7 +117,7 @@
                     </div>
                     <div class="col-xl-6 col-md-6">
                         <div class="single_about_info text-center">
-                            <p>我们从邀请外国公民进入吉尔吉斯共和国领土的那一刻起提供法律支持，并协助注册有限责任公司、
+                            <p>我们从邀请外国公民进入吉尔吉斯斯坦共和国的那一刻起提供移民支持，并协助注册有限责任公司、
                                 附加责任公司、封闭式股份公司、股份公司 和合资企业；协助获得工作许可证和工作簿；协助办理探亲、
                                 旅游、出境、来宾、学习、商务签证和探亲签证。我们有会计人员进行簿记，我们协助在居住地登记，
                                 获得吉尔吉斯共和国的居留许可和公民身份。</p>
