--- a/src/lawyer/templates/home-en.html
+++ b/src/lawyer/templates/home-en.html
@@ -62,8 +62,7 @@
                             <div class="social_media_links">
                                 <ul>
                                     <li><a href="https://api.whatsapp.com/send?phone=996772508593"> <i class="fa fa-whatsapp"></i> </a></li>
-                                    <li><a href="#"> <i class="fa fa-telegram"></i> </a></li>
-                                    <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
+                                    <li><a href="mailto:{{contact_info.email}}"> <i class="fa fa-envelope"></i> </a></li>
                                 </ul>
                             </div>
                         </div>
@@ -85,7 +84,7 @@
                     <div class="col-xl-7">
                         <div class="single_slider">
                             <div class="slider_text">
-                                <h3>Professional legal advice in Bishkek.</h3>
+                                <h3>Professional Migration and Visa Services to the Kyrgyz Republic.</h3>
                                 <p>We aim to provide high-quality service tailored to the needs of our clients.</p>
                                 <a href="https://api.whatsapp.com/send?phone=996{{whatsapp_number}}"
                                    class="boxed-btn4 ">Connect with us</a>
@@ -113,7 +112,7 @@
                             <p>We are a distinguished and professional legal partner, providing
                                 clients with all the necessary legal resources and solutions.
                                 Our law firm "Hedef Two" has been operating in the Kyrgyz market for more than 21 years,
-                                we provide legal support to citizens of China, Turkey, Iran, Pakistan, India,
+                                we provide migration support to citizens of China, Turkey, Iran, Pakistan, India,
                                 Afghanistan, Vietnam, Korea, Uzbekistan, Tajikistan, Azerbaijan, Canada, Great Britain,
                                 the Netherlands, Germany , Poland, Lithuania, Latvia, Moldova, Russia, USA, and other
                                 countries.</p>
@@ -121,8 +120,8 @@
                     </div>
                     <div class="col-xl-6 col-md-6">
                         <div class="single_about_info text-center">
-                            <p>We provide legal support from the moment of inviting foreign citizens to the territory
-                                of the Kyrgyz Republic and provide assistance in registering LLCs, ALCs, CJSCs, JSCs
+                            <p>We provide migration support from the moment of inviting foreign citizens to the territory
+                                of the Kyrgyz Republic and provide assistance in registering LLCs, ALCs, charitable and public foundations
                                 and joint ventures; in obtaining a work permit and a work book, family, tourist, exit,
                                 guest, study, business visas and a visa for visiting relatives. We have accountants on
                                 staff for bookkeeping, we provide assistance in registering at the place of residence,
