--- a/src/lawyer/templates/index.html
+++ b/src/lawyer/templates/index.html
@@ -36,7 +36,7 @@
                     <div class="row align-items-center justify-content-between no-gutters">
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-square">
-                                <p>ХЕДЕВ ДВА</p>
+                                <p>ХЕДЕФ ДВА</p>
                             </div>
                         </div>
                         <div class="col-xl-7 col-lg-8">
@@ -61,8 +61,7 @@
                             <div class="social_media_links">
                                 <ul>
                                     <li><a href="https://api.whatsapp.com/send?phone=996772508593"> <i class="fa fa-whatsapp"></i> </a></li>
-                                    <li><a href="#"> <i class="fa fa-telegram"></i> </a></li>
-                                    <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
+                                    <li><a href="mailto:{{contact_info.email}}"> <i class="fa fa-envelope"></i> </a></li>
                                 </ul>
                             </div>
                         </div>
@@ -84,7 +83,7 @@
                     <div class="col-xl-7">
                         <div class="single_slider">
                             <div class="slider_text">
-                                <h3>Профессиональные юридические консультации в Бишкеке.</h3>
+                                <h3>Профессиональные Миграционные и Визовые услуги в Кыргызскую Республику.</h3>
                                 <p>Мы стремимся предоставить высококачественное обслуживание,
                                 ориентированное на потребности клиентов.</p>
                                 <a href="https://api.whatsapp.com/send?phone=996{{whatsapp_number}}"
@@ -116,7 +115,7 @@
                             <p>Мы являемся выдающимся и
                                 профессиональным юридическим партнером, обеспечивая клиентов всеми необходимыми
                                 юридическими ресурсами и решениями. Наша юридическая компания «Хедеф Два», работает
-                                на рынке Кыргызстана более 21 года, мы оказываем юридическое сопровождение гражданам:
+                                на рынке Кыргызстана более 21 года, мы оказываем миграционное сопровождение гражданам:
                                 КНР,  Турции, Ирана, Пакистана,  Индии, Афганистана, Вьетнама, Кореи, Узбекистана,
                                 Таджикистана, Азербайджана Канады, Великобритании, Нидерландов, Германии, Польши,
                                 Литвы, Латвии, Молдовы, России, США, и других стран.</p>
@@ -124,9 +123,9 @@
                     </div>
                     <div class="col-xl-6 col-md-6">
                         <div class="single_about_info text-center">
-                            <p>Мы ведем юридическое сопровождение с момента приглашения иностранных
+                            <p>Мы ведем миграционное сопровождение с момента приглашения иностранных
                             граждан на территорию Кыргызской Республики и оказываем  помощь в регистрации ОсОО, ОсДО,
-                            ЗАО, АО и совместных предприятий; в получении разрешения на работу, в получении трудовой,
+                            благотворительные и общественные фонды и совместных предприятий; в получении разрешения на работу, в получении трудовой,
                             семейной, туристической, выездной, гостевой, учебной бизнес визы и визы посещения
                             родственников. В штате имеем бухгалтеров для ведения бухгалтерии, оказываем помощь в
                             прохождении регистрации по месту жительства, в получении вида на жительства и гражданства
