--- a/src/lawyer/templates/success-en.html
+++ b/src/lawyer/templates/success-en.html
@@ -62,8 +62,7 @@
                             <div class="social_media_links">
                                 <ul>
                                     <li><a href="https://api.whatsapp.com/send?phone=996772508593"> <i class="fa fa-whatsapp"></i> </a></li>
-                                    <li><a href="#"> <i class="fa fa-telegram"></i> </a></li>
-                                    <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
+                                    <li><a href="mailto:{{contact_info.email}}"> <i class="fa fa-envelope"></i> </a></li>
                                 </ul>
                             </div>
                         </div>
