--- a/src/lawyer/templates/success.html
+++ b/src/lawyer/templates/success.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Хедев Два</title>
+    <title>Хедеф Два</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -61,8 +61,7 @@
                             <div class="social_media_links">
                                 <ul>
                                     <li><a href="https://api.whatsapp.com/send?phone=996772508593"> <i class="fa fa-whatsapp"></i> </a></li>
-                                    <li><a href="#"> <i class="fa fa-telegram"></i> </a></li>
-                                    <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
+                                    <li><a href="mailto:{{contact_info.email}}"> <i class="fa fa-envelope"></i> </a></li>
                                 </ul>
                             </div>
                         </div>
